--- a/css/style.css
+++ b/css/style.css
@@ -6,33 +6,108 @@
 
 /* HEADER */
 .navbar {
-    background-color: lightgray  !important;
+    background-color: lightgray  !important;    
 }
 .nav-item a {
-    font-family: 'Times New Roman', Times, serif !important;
+    font-family: sans-serif !important;
     color: black !important;
 }
-
+.nav-item a:hover{
+    color: rgb(255, 123, 0) !important;
+}
 /* Index */
+.section0 {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    display: flex;
+    justify-content:center ;
+}
+.titulo_index {
+    width: 100%;
+    padding-top:  0px;
+    padding-bottom: 0px;    
+    text-align: center;
+    color: white;
+    font-family: sans-serif;    
+    background-color: gray;    
+    display: flex;
+    justify-content: center;    
+}
+.titulo_index h1{
+    font-size: 35px;
+    letter-spacing: 2px;
+    -webkit-text-stroke: 1px rgb(255, 123, 0); 
+    font-weight: bold;   
+}
 .contenedor_boton button {
-    font-family: 'Koulen', cursive;
+    font-family: sans-serif;
     justify-content: center;
     font-size: 18px;
-    width: 120px;
-    height: 40px;
+    width: 320px;
+    height: 35px;
     font-weight: bold;
-    color: black; 
-    border-radius: 5px; 
-    border-color: white;
-    background-color: rgb(255, 123, 0);
-    padding: 3px;
+    color: black;
+    border-radius: 10px; 
+    border-color: gray;
+    background-color: lightgray;        
 }
-
+/* === FOOTER INDEX === */
+.pie {
+    width: 100%;
+    height: 80px;
+    background-color: black;
+}
+.pie .container_footer {
+    width: 100%;
+    height: 80px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.pie .container_footer figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie .container_footer figure img {
+    width: 150px;
+    height: auto;
+    padding-top: 10px;
+}
+.pie .container_footer .box{
+    height: 80px;
+}
+.pie .small{
+    display: flex;
+    justify-content: center;
+    color: rgb(255, 123, 0);
+    padding-top: 30px;
+    letter-spacing: 1px;
+    font-family: sans-serif;
+}
+.pie .container_footer .redes{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    height: 70px;
+}
+.pie .container_footer .redes a {
+    display: inline-block;
+    text-decoration: none;
+    width: 80px;
+    height: 50px;
+    color: rgb(255, 123, 0);
+    text-align: center;
+    transition: all 300ms ease;    
+}
+.pie .container_footer .redes a:hover {
+    color: white;
+}
 /* FOOTER */
 .text-muted {
     color: orange  !important;    
 } 
-
 /* SERVICIOS */
 .titulo {
     padding: 30px;    
@@ -40,7 +115,6 @@
     color: orange;
     font-family:Arial, Helvetica, sans-serif;
 }
-
 /* ubicacion */
 h4 {
     font-size: 25px;
@@ -58,7 +132,6 @@ h4 {
     font-size: 25px;
 }
 /* SERVICIOS */
-
 .titulo_form {
     padding: 15px;  
     text-align: center;  
@@ -78,13 +151,12 @@ h5{
 } 
 /* NOSOTROS */
 
-#section1{
+/* #section1{
     width: 100%;
 }
 .contenedor1 {
     position: relative;
     display: flex;
-    /* text-align: center; */
     justify-content: center; 
 }
 .imagenes {
@@ -98,8 +170,7 @@ h5{
 .contenedor2{
     position: relative;
     display: flex;
-    /* text-align: center; */
-    justify-content: center; 
+        justify-content: center; 
     padding-top: 50px;
 }
 .texto {
@@ -119,19 +190,16 @@ h5{
 .contenedor2 p{
     font-size: 20px;
     text-align:center;
-    /* color: orange; */
     padding-bottom: 20px;
 }
 .contenedor3 {
     position: relative;
     display: flex;
-    /* text-align: center; */
     justify-content: center; 
     padding: 30px;
 }
 .contenedor_boton button {
     font-family: 'Koulen', cursive;
-    /* display: flex; */
     justify-content: center;
     font-size: 18px;
     width: 100px;
@@ -142,6 +210,15 @@ h5{
     border-color: white;
     background-color: rgb(255, 123, 0);
     padding: 3px;
+} */
+
+/* CONTACTO */
+.section_form{
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.btn{
+    background-color: rgb(255, 123, 0) !important;
 }
 
 
@@ -158,10 +235,75 @@ h5{
     .nav-link{
         font-size: 18px;        
     }
+    /* FOOTER INDEX*/
+    .pie .container_footer figure img {
+        width: 100px;
+        height: auto;
+        padding-top: 20px;
+    }
+    .pie .container_footer .box{
+        height: 60px;
+    }
+    .pie .small{
+        display: flex;
+        justify-content: center;
+        color: rgb(255, 123, 0);
+        padding-top: 20px;
+        text-align: center;
+        font-family: sans-serif;
+        font-size: 12px;
+    }    
+    .pie .container_footer .redes{
+        padding-top: 30px;
+        height: 70px;
+    }
+    .pie .container_footer .redes a {
+        width: 40px;
+        height: 20px;
+        
+    }
     /* FOOTER */
     .text-muted {
         font-size: 16px;
     } 
+    /* INDEX */
+    .section0{
+        height: 40px;        
+    }
+    .titulo_index {
+        width: 100%;
+        padding-top:  5px;          
+    }
+    .titulo_index h1{
+        font-size: 25px;         
+        -webkit-text-stroke: 0.5px rgb(255, 123, 0);   
+    }    
+    .contenedor1 {
+        width: 100%;   
+        height: auto;     
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+    } 
+    .imagenes {        
+        width: 50%;
+        height: auto;        
+        padding-top: 20px;
+        padding-bottom: 20PX;
+        display: flex;        
+        flex-direction: column;
+    } 
+    .contenedor3 {
+        position: relative;
+        display: flex;
+        justify-content: center; 
+        padding: 30px;
+    }     
+    .contenedor_boton button {
+        font-size: 18px;
+        width: 250px;
+        height: 30px;        
+    }
 }
 
 /* -- TABLET -- */
@@ -177,6 +319,70 @@ h5{
     .nav-link{
         font-size: 19px;
     }   
+    /* INDEX */
+    .section0{
+        height: 40px;        
+    }
+    .titulo_index {
+        width: 100%;
+        padding-top:  5px;          
+    }
+    .titulo_index h1{
+        font-size: 25px;         
+        -webkit-text-stroke: 0.5px rgb(255, 123, 0);   
+    }    
+    .contenedor1 {
+        width: 100%;   
+        height: auto;     
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+    } 
+    .imagenes {        
+        width: 50%;
+        height: auto;        
+        padding-top: 20px;
+        padding-bottom: 20PX;
+        display: flex;        
+        flex-direction: column;
+    } 
+    .contenedor3 {
+        position: relative;
+        display: flex;
+        justify-content: center; 
+        padding: 30px;
+    }     
+    .contenedor_boton button {
+        font-size: 18px;
+        width: 250px;
+        height: 30px;        
+    }
+    /* FOOTER INDEX*/
+    .pie .container_footer figure img {
+        width: 100px;
+        height: auto;
+        padding-top: 20px;
+    }
+    .pie .container_footer .box{
+        height: 60px;
+    }
+    .pie .small{
+        display: flex;
+        justify-content: center;
+        color: rgb(255, 123, 0);
+        padding-top: 20px;
+        text-align: center;
+        font-family: sans-serif;
+        font-size: 12px;
+    }    
+    .pie .container_footer .redes{
+        padding-top: 30px;
+        height: 70px;
+    }
+    .pie .container_footer .redes a {
+        width: 40px;
+        height: 20px;        
+    }
     /* FOOTER */
     .text-muted {
         font-size: 16px;
@@ -192,7 +398,7 @@ h5{
         padding-bottom: 0px;
     }
     /* NOSOTROS */
-    .contenedor2 p{
+    /* .contenedor2 p{
         font-size: 25px;
         text-align: justify;
         padding-bottom: 10px;
@@ -202,23 +408,31 @@ h5{
         width: 150px;
         height: 60px;
         padding: 10px;
-    }    
+    }    */ 
 }
 
 /* -- DESKTOP -- */
 @media (min-width: 992px) {
-
     /* HEADER */
     .navbar-brand img {    
-        width: 170px;
-            
+        width: 170px;            
     }
     .container-fluid{
         width: 80%;
     }
     .nav-link{
-        font-size: 22px;
+        font-size: 22px;        
     }       
+    /* FOOTER INDEX*/     
+    .pie .small{
+        display: flex;
+        justify-content: center;
+        color: rgb(255, 123, 0);
+        padding-top: 15px;
+        text-align: center;
+        font-family: sans-serif;
+        font-size: 15px;
+    }    
     /* FOOTER */
     .text-muted {
         font-size: 20px;
@@ -233,43 +447,48 @@ h5{
         padding-top: 0px;
         padding-bottom: 0px;
     }
-    /* NOSOTROS */
+    /* INDEX */
     #section1{
-        display: flex;     
-    }    
-    .contenedor1 {
+        display: flex;  
+        justify-content: center;   
         width: 100%;        
+    }    
+    .contenedor0 {        
+        width: 100%;  
+        height:auto ;      
+        padding: 20px;
+        display: flex;
+        justify-content: center;   
+        align-items: center;        
+    }
+    .carousel {
+        width: 100%;
+        height: 450px;        
+        padding-top: 50px;
+        display: flex; 
+        align-content: center;
+    }
+    .contenedor1 {
+        width: 80%;   
+        height: auto;     
+        padding: 20px;
+        display: flex;
+        justify-content: center;
     }
     .imagenes {        
-        width: 42%;
+        width: 45%;
         height: auto;        
-        padding-top: 50px;
+        padding-top: 60px;
+        display: flex;        
+        flex-direction: column;
     }
-    .contenedor2{        
-        width: 100%;
-    }
-    .texto {        
-        width: 80%;                
-    }
-    .contenedor2 h1{
-        font-size: 30px;
-        text-align: center;
-        color: rgb(255, 123, 0);
-        padding-bottom: 40px;   
-    }
-    .contenedor2 p{
-        font-size: 25px;
-        text-align: justify;
-        padding-bottom: 10px;
-    }   
-    .contenedor_boton button {
-        font-size: 20px;
-        width: 150px;
-        height: 60px;
-        padding: 10px;
-    }
-
-
+    .contenedor3 {
+        position: relative;
+        display: flex;
+        justify-content: center; 
+        padding: 30px;
+    }    
+    
 }
 
 
