--- a/sass/style.css
+++ b/sass/style.css
@@ -1,5 +1,25 @@
 /* INDEX */
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 /* variables */
+/* MAPS */
+.fa-facebook {
+  background-color: blue;
+}
+
+.fa-instagram {
+  background-color: violet;
+}
+
+.fa-twitter {
+  background-color: lightblue;
+}
+
 header .navbar {
   background-color: lightgray  !important;
 }
@@ -45,14 +65,21 @@ main .section0 .titulo_index {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 18px;
+}
+
+main .section0 .titulo_index H1 {
+  letter-spacing: 1px;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 35px;
 }
 
 main #section1 {
@@ -73,7 +100,7 @@ main #section1 .contenedor0 {
   padding: 30px;
 }
 
-main #section1 .contenedor1 {
+main #section1 .contenedor1, main #section1 .contenedor1 .imagenes {
   width: 50%;
   height: auto;
   display: -webkit-box;
@@ -85,19 +112,14 @@ main #section1 .contenedor1 {
 }
 
 main #section1 .contenedor1 .imagenes {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 80%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
-main #section1 .contenedor1 img {
+main #section1 .contenedor1 img, main #section1 .contenedor1 .imagenes img {
   width: 80%;
   height: auto;
 }
@@ -108,12 +130,16 @@ main #section2 {
 
 main #section2 .contenedor3 {
   position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 30px;
 }
 
@@ -142,6 +168,10 @@ main #section2 .contenedor3 .contenedor_boton button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -167,19 +197,25 @@ main #section2 .contenedor3 .contenedor_boton button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-top: 30px;
+  padding-top: 20px;
+  gap: 10px;
   height: 70px;
 }
 
 .pie .container_footer .redes a {
   display: inline-block;
   text-decoration: none;
-  width: 80px;
-  height: 50px;
-  color: #ff7b00;
+  padding-top: 10px;
+  width: 50px;
+  height: 40px;
+  color: black;
   text-align: center;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
@@ -229,7 +265,7 @@ main #section2 .contenedor3 .contenedor_boton button {
     padding-bottom: 40px;
   }
   main .section0 .titulo_index h1 {
-    font-size: 20px;
+    font-size: 16px;
   }
   main #section1 {
     display: -webkit-box;
@@ -249,7 +285,7 @@ main #section2 .contenedor3 .contenedor_boton button {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  main #section1 .contenedor1 {
+  main #section1 .contenedor1, main #section1 .contenedor1 .imagenes {
     width: 100%;
     height: auto;
     display: -webkit-box;
@@ -263,7 +299,7 @@ main #section2 .contenedor3 .contenedor_boton button {
     width: 80%;
     height: auto;
   }
-  main #section1 .contenedor1 img {
+  main #section1 .contenedor1 img, main #section1 .contenedor1 .imagenes img {
     width: 100%;
     height: auto;
   }
@@ -298,21 +334,16 @@ main #section2 .contenedor3 .contenedor_boton button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding-top: 30px;
-    height: 70px;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    height: 60px;
   }
   .pie .container_footer .redes a {
     display: inline-block;
     text-decoration: none;
-    width: 100%;
-    height: 50px;
-    color: #ff7b00;
-    text-align: center;
-    -webkit-transition: all 300ms ease;
-    transition: all 300ms ease;
-  }
-  .pie .container_footer .redes a:hover {
-    color: white;
+    padding-top: 7px;
+    width: 30px;
+    height: 30px;
   }
   .pie .container_footer .box {
     height: 100%;
@@ -381,54 +412,59 @@ main #section2 .contenedor3 .contenedor_boton button {
     padding-bottom: 40px;
   }
   main .section0 .titulo_index h1 {
-    font-size: 20px;
+    font-size: 18px;
   }
-  /* .pie {
-        width: 100%;
-        height: 70px;       
-        & .small{
-            display: flex;
-            justify-content: center; 
-                     
-            font-size: 10px;
-        }
-        & .container_footer {
-            width: 100%;
-            height: 70px;            
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            & .redes{
-                display: flex;
-                justify-content: center;
-                padding-top: 30px;
-                height: 70px;
-                & a {
-                    display: inline-block;
-                    text-decoration: none;
-                    width: 100%;
-                    height: 50px;
-                    color: $colorPrimario;
-                    text-align: center;
-                    transition: all 300ms ease;    
-                }
-                & a:hover {
-                    color: white;
-                }
-            }
-            & .box{
-                height: 100%;
-            }
-            & figure {
-                width: 100%;
-                height: auto;
-                padding-top: 10px;
-            }
-            & img {
-                width: 100px;
-                height: auto;
-                padding-top: 10px;
-            }
-        } 
-    }*/
+  .pie {
+    width: 100%;
+    height: 70px;
+  }
+  .pie .small {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 10px;
+  }
+  .pie .container_footer {
+    width: 100%;
+    height: 70px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+  .pie .container_footer .redes {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    height: 60px;
+  }
+  .pie .container_footer .redes a {
+    display: inline-block;
+    text-decoration: none;
+    padding-top: 7px;
+    width: 30px;
+    height: 30px;
+  }
+  .pie .container_footer .box {
+    height: 100%;
+  }
+  .pie .container_footer figure {
+    width: 100%;
+    height: auto;
+    padding-top: 10px;
+  }
+  .pie .container_footer img {
+    width: 100px;
+    height: auto;
+    padding-top: 10px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
