--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,28 @@
 /* INDEX */
 
+*{
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
+}
+
 @import 'vars';
+
+
+/* MAPS */
+$red_soc: (
+    facebook: blue,
+    instagram:  violet,
+    twitter:  lightblue,
+);
+@each $red, $color in $red_soc {
+    .fa-#{$red} {
+        background-color: $color;
+    }
+ }
+ 
+
+ 
 
 header {    
     & .navbar{
@@ -15,6 +37,13 @@ header {
     } 
     
 }
+
+@mixin flex-row-center{
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+}
+
 
 
 
@@ -35,10 +64,14 @@ main{
                 color: $colorPrimario;
                 font-family: $fontPrincipal;    
                 background-color: $backGris;    
-                display: flex;
-                justify-content: center; 
-                flex-direction: row;
+                @include flex-row-center;
                 padding-top: 18px;
+                & H1{
+                    letter-spacing: 1px;
+                    text-align: center;
+                    font-family: $fontPrincipal;
+                    font-size: 35px;
+                }
                 
             }
     }
@@ -58,10 +91,10 @@ main{
             height: auto;     
             display: flex;
             justify-content: center;            
-            & .imagenes {                     
-                display: flex;   
-                flex-direction: column;  
-                justify-content: center;                 
+            & .imagenes { 
+                @extend .contenedor1;  
+                width: 80%;                  
+                flex-direction: column;                                
             }
             & img {        
                 width: 80%;
@@ -74,8 +107,7 @@ main{
         
         & .contenedor3 {
             position: relative;
-            justify-content: center; 
-            display: flex;
+            @include flex-row-center;
             padding: 30px;
             & .contenedor_boton button {
                 font-family: $fontPrincipal;
@@ -92,13 +124,14 @@ main{
         }  
     }         
 }
+
+
 .pie {
     width: 100%;
     height: 80px;
     background-color: $fondoFooter;
     & .small{
-        display: flex;
-        justify-content: center;
+        @include flex-row-center;
         color: $colorPrimario;
         padding-top: 30px;
         letter-spacing: 1px;
@@ -112,23 +145,25 @@ main{
         margin: auto;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        
         & .redes{
-            display: flex;
-            justify-content: center;
-            padding-top: 30px;
+            @include flex-row-center;
+            padding-top: 20px;
+            gap: 10px;
             height: 70px;
             & a {
                 display: inline-block;
                 text-decoration: none;
-                width: 80px;
-                height: 50px;
-                color: $colorPrimario;
+                padding-top: 10px;
+                width: 50px;
+                height: 40px;
+                color: black;
                 text-align: center;
                 transition: all 300ms ease;    
             }
             & a:hover {
                 color: white;
-            }
+            } 
         }
         & .box{
             height: 80px;
@@ -169,7 +204,7 @@ main{
                 & .titulo_index{
                     padding-bottom: 40px;
                     h1 {
-                        font-size: 20px;                        
+                        font-size: 16px;                        
                     }                    
                 }
         }
@@ -216,8 +251,7 @@ main{
         height: 70px;       
         & .small{
             display: flex;
-            justify-content: center; 
-                     
+            justify-content: center;                      
             font-size: 10px;
         }
         & .container_footer {
@@ -227,21 +261,18 @@ main{
             grid-template-columns: repeat(3, 1fr);
             & .redes{
                 display: flex;
-                justify-content: center;
-                padding-top: 30px;
-                height: 70px;
+                justify-content: center;   
+                align-content: center;             
+                height: 60px;
+
                 & a {
+                    
                     display: inline-block;
-                    text-decoration: none;
-                    width: 100%;
-                    height: 50px;
-                    color: $colorPrimario;
-                    text-align: center;
-                    transition: all 300ms ease;    
-                }
-                & a:hover {
-                    color: white;
-                }
+                    text-decoration: none;  
+                    padding-top: 7px;
+                    width: 30px;
+                    height: 30px;                       
+                }                
             }
             & .box{
                 height: 100%;
@@ -282,7 +313,7 @@ main{
                 & .titulo_index{
                     padding-bottom: 40px;
                     h1 {
-                        font-size: 20px;                        
+                        font-size: 18px;                        
                     }                    
                 }
         }
@@ -319,7 +350,7 @@ main{
             }  
         }   */       
     }
-    /* .pie {
+    .pie {
         width: 100%;
         height: 70px;       
         & .small{
@@ -335,21 +366,18 @@ main{
             grid-template-columns: repeat(3, 1fr);
             & .redes{
                 display: flex;
-                justify-content: center;
-                padding-top: 30px;
-                height: 70px;
+                justify-content: center;   
+                align-content: center;             
+                height: 60px;
+
                 & a {
+                    
                     display: inline-block;
-                    text-decoration: none;
-                    width: 100%;
-                    height: 50px;
-                    color: $colorPrimario;
-                    text-align: center;
-                    transition: all 300ms ease;    
-                }
-                & a:hover {
-                    color: white;
-                }
+                    text-decoration: none;  
+                    padding-top: 7px;
+                    width: 30px;
+                    height: 30px;                       
+                }                
             }
             & .box{
                 height: 100%;
@@ -364,8 +392,8 @@ main{
                 height: auto;
                 padding-top: 10px;
             }
-        } 
-    }*/
+        }
+    }
 }
 
 
